--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       Music Player
     </h1>
 
-    <div class="music-container play" id="music-container">
+    <div class="music-container" id="music-container">
       <div class="music-info">
         <h4 id="title">ukulele</h4>
         <div class="progress-container" id="progress-container">
